# IOT-Final-project

./: .gitignore  README.md  final_project_iot.ino
ModelTraining/: ModelTraining.py
RealTimePrediction/: RealTimePrediction.py
db/: .env  ModelTraining.py  RealTimePrediction.py  db_test.py  dbtesting.py  model.pkl  pyproject.toml
